--- a/25.Grafana.md
+++ b/25.Grafana.md
@@ -145,3 +145,140 @@ Enter a name in the New name field and then click Save.
 
 https://grafana.com/tutorials/grafana-fundamentals/#9
 ```
+
+# Annotate events
+```
+When things go bad, it often helps if you understand the context in which the failure occurred. Time of last deploy, system changes, or database migration can offer insight into what might have caused an outage. Annotations allow you to represent such events directly on your graphs.
+
+In the next part of the tutorial, we will simulate some common use cases that someone would add annotations for.
+
+To manually add an annotation, click anywhere in your graph, then click Add annotation.
+
+In Description, enter Migrated user database.
+
+Click Save.
+
+Grafana adds your annotation to the graph. Hover your mouse over the base of the annotation to read the text.
+
+Grafana also lets you annotate a time interval, with region annotations.
+
+Add a region annotation:
+
+Press Ctrl (or Cmd on macOS), then click and drag across the graph to select an area.
+In Description, enter Performed load tests.
+In Tags, enter testing.
+
+Manually annotating your dashboard is fine for those single events. For regularly occurring events, such as deploying a new release, Grafana supports querying annotations from one of your data sources. Let’s create an annotation using the Loki data source we added earlier.
+
+At the top of the dashboard, click the Dashboard settings (gear) icon.
+
+Go to Annotations and click Add Annotation Query.
+
+In Name, enter Errors.
+
+In Data source, select Loki.
+
+In Query, enter the following query:
+
+{filename="/var/log/tns-app.log"} |= "error"
+Click Add. Grafana displays the Annotations list, with your new annotation.
+
+Click the Go back arrow to return to your dashboard.
+
+The log lines returned by your query are now displayed as annotations in the graph.
+
+Being able to combine data from multiple data sources in one graph allows you to correlate information from both Prometheus and Loki.
+```
+
+# Set up an alert
+```
+Alerts allow you to identify problems in your system moments after they occur. By quickly identifying unintended changes in your system, you can minimize disruptions to your services.
+
+Alerts consists of two parts:
+
+Notification channel - How the alert is delivered. When the conditions of an alert rule are met, the Grafana notifies the channels configured for that alert.
+Alert rules - When the alert is triggered. Alert rules are defined by one or more conditions that are regularly evaluated by Grafana.
+```
+
+# Configure a notification channel
+```
+In this step, you’ll send alerts using web hooks. To test your alerts, you first need to have a place to send them.
+
+Browse to requestbin.com.
+
+Clear the Private (requires log in) check box.
+
+Click Use Old Version (which is publicly available).
+
+You request bin is now waiting for the first request.
+
+Copy the endpoint URL.
+
+Next, configure a notification channel for web hooks to send notifications to your Request Bin.
+
+In the side bar, hover your cursor over the Alerting (bell) icon and then click Notification channels.
+Click Add channel.
+In Name, enter RequestBin.
+In Type, select webhook.
+In Url, paste the endpoint to your request bin.
+
+https://endpoint.m.pipedream.net
+
+Click Send Test to send a test alert to your request bin.
+Navigate back to the request bin you created earlier. On the left side, there’s now a POST / entry. Click it to see what information is sent by Grafana.
+Click Save.
+```
+
+# Configure an alert rule
+```
+Now that Grafana knows how to notify you, it’s time to set up an alert rule:
+
+In the sidebar, click Dashboards -> Manage.
+
+Click the dashboard you created earlier.
+
+Click the Traffic panel title and then click Edit.
+
+Click the Alert tab under the graph to access the settings for alerting.
+
+Click Create Alert.
+
+In Name, enter My alert.
+
+In Evaluate every, enter 5s. For the purpose of this tutorial, the evaluation interval is intentionally short to make it easier to test.
+
+In For, enter 0m. This setting makes Grafana wait until an alert has fired for a given time, before Grafana sends the notification.
+
+In the Conditions section, you can change the white text by clicking it and then choosing a new option or typing text in the blank field.
+
+Change the alert condition to:
+
+WHEN last() OF query(A, 1m, now) IS ABOVE 0.2
+This condition evaluates whether the last value of any of the time series from one minute back is more than 0.2 requests per second.
+
+In the Notifications section, click the plus sign (+) next to Send to and then click RequestBin.
+
+Click the Go back arrow and then click the Save dashboard icon.
+
+Enter a note to describe your changes. Something like, Added My alert. Notes like this are optional, but can be useful when trying to understand changes made to dashboards over time.
+
+You now have an alert set up to send a notification using a web hook. See if you can trigger it by generating some traffic on the sample application.
+
+Browse to localhost:8081.
+
+Refresh the page repeatedly to generate traffic.
+
+When Grafana triggers the alert, it sends a request to the web hook you set up earlier.
+
+Browse to the Request Bin you created earlier, to inspect the alert notification.
+```
+
+# Pause an alert
+```
+Once you’ve acknowledged an alert, consider pausing it. This can be useful to avoid sending subsequent alerts, while you work on a fix.
+
+In the Grafana side bar, hover your cursor over the Alerting icon and then click Alert Rules. All the alert rules configured so far are listed, along with their current state.
+Find your alert in the list, and click the Pause icon on the right. The Pause icon turns into a Play icon.
+Click the Play icon to resume evaluation of your alert.
+
+```
