--- a/25.Grafana.md
+++ b/25.Grafana.md
@@ -26,7 +26,7 @@ Title = Example.
 URL= https://example.com.
 Submit
 ```
-# Acessar a poorta 30000
+# Acessar a porta 3000
 ```
 Abrir outra aba
 localhost:3000
