--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -14,6 +14,28 @@ No centOS:<br>
 ```
 cat /etc/centos-release
 ```
+
+# Monitorar Hardware
+```
+informações sobre o processador.
+lscpu
+
+listar o hardware
+lshw -short
+
+Dispositivos PCI podem ser listados com
+lspci
+
+lista de dispositivos SATA e SCSI
+lsscsi
+
+Dispositivos USB
+lsusb
+
+Espaço
+df -h
+```
+
 # Outros comandos
 
 Mudar de diretório.<br>
