Comando de parar o docker

--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -1,29 +1,38 @@
+# Parar o container
+```
+docker stop <id>
+```
+## Parar todos os containers
+```
+docker stop $(docker ps -q)
+```
+
 # Pesquisas
 ## Lista de Retorno
-Ordenar pelas portas<>
+### Ordenar pelas portas<
 ```
 docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 3 )
 ```
-Ordenar pelos nomes<>
+### Ordenar pelos nomes
 ```
 docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 2 )
 ```
-Ordenar pelos ids<>
+### Ordenar pelos ids
 ```
 docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 1 )
 ```
 
-Procurar as imagens que comecem com a palavra minha<br>
+## Procurar as imagens que comecem com a palavra minha
 ```
 docker images | grep minha
 ```
 
-Ver o log do container (colocar os dois primeiros dígitos do id)<br>
+## Ver o log do container (colocar pelo menos os três primeiros dígitos do id)<br>
 ```
-docker logs 92
+docker logs 921
 ```
 
-Deletar imagem<br>
+## Deletar imagem<br>
 ```
 docker images
 docker rmi nginx:1.16.0-alpine-perl
