Parei no passo 9

--- a/25.Grafana.md
+++ b/25.Grafana.md
@@ -2,13 +2,17 @@
 ```
 https://grafana.com/tutorials/
 ```
-# Prerequisites
+## Introduction
+https://grafana.com/tutorials/grafana-fundamentals/#1<br>
+
+Prerequisites<br>
 ```
 https://docs.docker.com/install/
 https://docs.docker.com/compose/
 https://git-scm.com/
 ```
-# Set up the sample application
+## Set up the sample application
+https://grafana.com/tutorials/grafana-fundamentals/#2<br>
 ```
 cd ~
 mkdir grafana
@@ -19,14 +23,17 @@ docker ps
 docker-compose up -d
 docker-compose ps
 ```
-# Acessar a porta 8081
+### Acessar a porta 8081
 ```
 http://localhost:8081
 Title = Example.
 URL= https://example.com.
 Submit
 ```
-# Acessar a porta 3000
+## Login no Grafana
+https://grafana.com/tutorials/grafana-fundamentals/#3<br>
+
+### Acessar a porta 3000
 ```
 Abrir outra aba
 localhost:3000
@@ -39,22 +46,26 @@ Mude o password para admin2
 Confirme o password para admin2
 Salvar
 ```
-# Add a metrics data source
+## Adicionar fonte de dados para métricas
+https://grafana.com/tutorials/grafana-fundamentals/#4<br>
 ```
-In the side bar, hover your cursor over the Configuration (gear) icon, and then click Data Sources.
-Click Add data source.
-In the list of data sources, click Prometheus (Select).
-In the URL box, enter http://prometheus:9090
-Click Save & Test.
-```
-# Explore your metrics
-```
-Explore (compass rose) icon.
-No campo de entrada escrito "Enter a PromQL query", digite:
-tns_request_duration_seconds_count
-Shift + Enter
+Na barra vertical lateral esquerda, vá em Configurações (ícone engrenagem) e clique em Data Sources.
 
-No canto superior direito, clique na seta do dropdown e selecione 5s
+Botão Add data source, Prometheus (Botão Select).
+Coloque caixa URL insira:
+http://prometheus:9090
+Vá em baixo, clique no Botão Save & Test.
+Vai aparecer uma notificação "Data Source is Working"
+```
+## Explorando as métricas
+https://grafana.com/tutorials/grafana-fundamentals/#5<br>
+```
+Na barra vertical lateral esquerda, vá em Explore (ícone bússola).
+No campo de entrada escrito "Enter a PromQL query" (Ao lado de Metrics), digite:
+tns_request_duration_seconds_count
+Aperte Shift + Enter
+
+No canto superior direito, clique na seta do dropdown (Run Query) e selecione 5s
 
 Altere a Query
 No campo de entrada escrito "Enter a PromQL query", digite:
@@ -62,91 +73,85 @@ rate(tns_request_duration_seconds_count[5m])
 
 Note que a escala da esquerda mudará.
 
-
-Add the rate function to your query to visualize the rate of requests per second. Enter the following in the Query editor and then press Shift + Enter.
-
-rate(tns_request_duration_seconds_count[5m])
-Shift+Enter
-
 Mudar a legenda (mostrar por rota)
-
+No campo de entrada escrito "Enter a PromQL query", digite:
 sum(rate(tns_request_duration_seconds_count[5m])) by(route)
 
-Go back to the sample application and generate some traffic by adding new links, voting, or just refresh the browser.
+Vá na aba que tem a porta 8081 e dê um refresh na página para gerar tráfego (clique na barra de endeço e clique enter).
 
-In the upper right corner, click the time picker, and select Last 5 minutes. By zooming in on the last few minutes, it’s easier to see when you receive new data.
-
-Depending on your use case, you might want to group on other labels. Try grouping by other labels, such as status_code, by changing the by(route) part of the query.
-
+No canto superior direito selecione o tempo "Last 5 minutes" (ícone de relógio). É mais fácil para ver quando recebe novos dados.
+Clique na legenda para selecionar por rota.
 ```
 
-# Add a logging data source
+## Adicionar uma fonte de log
+https://grafana.com/tutorials/grafana-fundamentals/#6<br>
+```
+Na barra vertical lateral esquerda, vá em Configurações (ícone engrenagem) e clique em Data Sources.
+
+Clique no botão Add data source.
+Selecione o Loki clicando no Botão Select.
+Coloque caixa URL insira:
+http://loki:3100
+Vá em baixo, clique no Botão Save & Test.
+Vai aparecer uma notificação "Data Source connected and labels found"
 
 ```
-In the side bar, hover your cursor over the Configuration (gear) icon, and then click Data Sources.
-Click Add data source.
-In the list of data sources, click Loki.
-In the URL box, enter http://loki:3100.
-Click Save & Test to save your changes.
+## Explorando os logs
+https://grafana.com/tutorials/grafana-fundamentals/#7<br>
 ```
-# Explore your logs
-```
-In the side bar, click the Explore (compass) icon.
-In the data source list at the top, select the Loki data source.
-In the Query editor, enter:
+Na barra vertical lateral esquerda, vá em Explore (ícone bússola).
+Na lista de fonte de dados localizado no topo selecione "Loki".
+Na caixa de entrada de Query insira (ao lado de Log labels):
 
 {filename="/var/log/tns-app.log"}
-Shift+Enter
+Aperte Shift+Enter
 
-Grafana displays all logs within the log file of the sample application. The height of each bar encodes the number of logs that were generated at that time.
+Grafana mostra todos os logs do arquivo de log da aplicação de amostra. A altura de cada barra mostra a quantidade de logs que foram gerados, no tempo correspondente.
 
-Click and drag across the bars in the graph to filter logs based on time.
+Selecione um intervalo clicando e arrastando o mouse dentro do gráfico (da esquerda para a direita).
+Loki se baseia nas etiquetas e nas ocorrências específicas.
 
-Not only does Loki let you filter logs based on labels, but on specific occurrences.
+Vamos gerar um erro para analisar:
+Na aplicação de amostra (aba da porta 8081) insira um novo link sem a URL, o que gerará um erro do tipo "empty url".
 
-Let’s generate an error, and analyze it with Explore.
-
-In the sample application, post a new link without a URL to generate an error in your browser that says empty url.
-
-Go back to Grafana and enter the following query to filter log lines based on a substring:
+Vá no Grafana (Aba 3000) e entre a seguinte query:
 
 {filename="/var/log/tns-app.log"} |= "error"
-Shift + Enter
+No canto superior direito, clique na seta do dropdown (Run Query) e selecione 5s
+Se não atualizar pressione Shift + Enter.
+Se não aparecer o erro, selecione a última hora de eventos.
 
-Click on the log line that says level=error msg="empty url" to see more information about the error.
+Clique na linha onde diz level=error msg="empty url" para visualizar informações do erro.
 
-Logs are helpful for understanding what went wrong. Later in this tutorial, you’ll see how you can correlate logs with metrics from Prometheus to better understand the context of the error.
+Logs são úteis para entender o que está errado. 
 ```
 
-# Build a dashboard
+## Construindo um dashboard
+https://grafana.com/tutorials/grafana-fundamentals/#8<br>
 ```
-A dashboard gives you an at-a-glance view of your data and lets you track metrics through different visualizations.
+O dashboard nos dá uma visão melhor e permite rastrear metricas de diferentes visualizações.
+Dashboards são formados de painéis, cada um representando algo a contar.
 
-Dashboards consist of panels, each representing a part of the story you want your dashboard to tell.
+Cada painel consiste numa visualização de uma query. A query define o que queremos mostrar, enquanto que a visualização define como os dados serão mostrados.
 
-Every panel consists of a query and a visualization. The query defines what data you want to display, whereas the visualization defines how the data is displayed.
+Na barra vertical lateral esquerda, vá em Create (ícone de sinal de mais), e clique em Dashboad.
 
-In the side bar, hover your cursor over the Create (plus sign) icon and then click Dashboard.
+Clique no botão Add new panel.
 
-Click Add new panel.
-
-In the Query editor below the graph, enter the query from earlier and then press Shift + Enter:
-
+No Query editor abaixo do gráfico adicione a query (Ao lado de Metrics):
 sum(rate(tns_request_duration_seconds_count[5m])) by(route)
-In the Legend field, enter {{route}} to rename the time series in the legend. The graph legend updates when you click outside the field.
+Pressione Shift + Enter
+No campo Legend, entre {{route}} para renomear o tempo na legenda do gráfico. O Gráfico atualiza quando clica fora do campo.
 
-In the Panel editor on the right, under Settings, change the panel title to “Traffic”.
+No editor do painel localizado à direita, mude o título para Traffic.
+Clique no botão Apply localizado no canto superior direito e volte para a Visão de dashboard.
 
-Click Apply in the top-right corner to save the panel and go back to the dashboard view.
-
-Click the Save dashboard (disk) icon at the top of the dashboard to save your dashboard.
-
-Enter a name in the New name field and then click Save.
-
-https://grafana.com/tutorials/grafana-fundamentals/#9
+Clique no ícode de disquete para salvar o dashboard.
+Coloque o nome "Dashboard Traffic" e clique no botão Save.
 ```
 
 # Annotate events
+https://grafana.com/tutorials/grafana-fundamentals/#9<br>
 ```
 When things go bad, it often helps if you understand the context in which the failure occurred. Time of last deploy, system changes, or database migration can offer insight into what might have caused an outage. Annotations allow you to represent such events directly on your graphs.
 
