--- a/02.Producao.md
+++ b/02.Producao.md
@@ -143,10 +143,13 @@ docker inspect -f "{{ .RestartCount }}" <container_id>
 docker inspect -f "{{ .State.StartedAt }}" <container_id>
 ```
 
-Lista de todos os containers com id, status de restart e quantidadede (de restart)<br>
+Lista de todos os containers com id, status de restart e quantidadede (de restart) (que estão rodando)<br>
 ```
 docker inspect -f "{{.Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}" $(docker container ls -q)
 ```
+
+Lista de todos os containers com id, status de restart e quantidadede (de restart) (incluindo os que não estão rodando)<br>
+docker inspect -f "{{.Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}" $(docker container ps -a -q)
 
 
 Explicando:<br>
