--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -1,3 +1,10 @@
+# Remover
+## Remover todos os containers parados
+```
+CUIDADO!!!!!!!!
+docker rm -v $(docker ps -a -q -f status=exited)
+```
+
 # Parar o container
 ```
 docker stop <id>
@@ -8,6 +15,11 @@ docker stop $(docker ps -q)
 ```
 
 # Pesquisas
+## Mostrar todos os containers parados
+```
+docker ps -a -f status=exited
+```
+
 ## Lista de Retorno
 ### Ordenar pelas portas<
 ```
@@ -26,6 +38,8 @@ docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf
 ```
 docker images | grep minha
 ```
+## Procurar containers que tenham no nome a palavra tutorial
+docker ps -a | grep tutorial
 
 ## Ver o log do container (colocar pelo menos os três primeiros dígitos do id)<br>
 ```
