--- a/25.Grafana.md
+++ b/25.Grafana.md
@@ -153,67 +153,66 @@ Coloque o nome "Dashboard Traffic" e clique no botão Save.
 # Annotate events
 https://grafana.com/tutorials/grafana-fundamentals/#9<br>
 ```
-When things go bad, it often helps if you understand the context in which the failure occurred. Time of last deploy, system changes, or database migration can offer insight into what might have caused an outage. Annotations allow you to represent such events directly on your graphs.
+Quando as coisas vão mal, é necessário enender o contexto da falha. Tempo da última implantação, mudanças de sistemas, ou migração de bases de dados podem oferecer uma visão sobre o que pode ter causado uma interrupção. As anotações permitem que você represente tais eventos diretamente em seus gráficos.
 
-In the next part of the tutorial, we will simulate some common use cases that someone would add annotations for.
+Para adicionar uma anotação:
+Clique em qualquer lugar do gráfico e, a seguir, clique em Adicionar anotação.
 
-To manually add an annotation, click anywhere in your graph, then click Add annotation.
-
-In Description, enter Migrated user database.
+Em Descrição, insira Banco de dados do usuário migrado.
 
 Click Save.
 
-Grafana adds your annotation to the graph. Hover your mouse over the base of the annotation to read the text.
+Grafana adiciona sua anotação ao gráfico. Passe o mouse sobre a base da anotação para ler o texto.
 
-Grafana also lets you annotate a time interval, with region annotations.
+Grafana também permite anotar um intervalo de tempo, com anotações de região.
 
-Add a region annotation:
+Adicionar uma anotação de região:
 
-Press Ctrl (or Cmd on macOS), then click and drag across the graph to select an area.
-In Description, enter Performed load tests.
-In Tags, enter testing.
+Pressione Ctrl, clique e arraste pelo gráfico para selecionar uma área.
+Em Descrição, insira Testes de carga realizados.
+Em Tags, insira testing.
 
-Manually annotating your dashboard is fine for those single events. For regularly occurring events, such as deploying a new release, Grafana supports querying annotations from one of your data sources. Let’s create an annotation using the Loki data source we added earlier.
+Anotar manualmente seu painel é adequado para esses eventos únicos. Para eventos que ocorrem regularmente, como a implantação de uma nova versão, o Grafana oferece suporte à consulta de anotações de uma de suas fontes de dados. Vamos criar uma anotação usando a fonte de dados Loki que adicionamos anteriormente.
 
-At the top of the dashboard, click the Dashboard settings (gear) icon.
+Na parte superior do painel, clique no ícone Configurações do painel (engrenagem).
 
-Go to Annotations and click Add Annotation Query.
+Vá para Anotações e clique em Adicionar consulta de anotação.
 
-In Name, enter Errors.
+Em Nome, insira Erros.
 
-In Data source, select Loki.
+Em Fonte de dados, selecione Loki.
 
-In Query, enter the following query:
+Em Consulta, insira a seguinte consulta:
 
 {filename="/var/log/tns-app.log"} |= "error"
-Click Add. Grafana displays the Annotations list, with your new annotation.
+Clique em Adicionar. Grafana exibe a lista de Anotações, com sua nova anotação.
 
-Click the Go back arrow to return to your dashboard.
+Clique na seta Voltar para retornar ao seu painel.
 
-The log lines returned by your query are now displayed as annotations in the graph.
+As linhas de registro retornadas por sua consulta agora são exibidas como anotações no gráfico.
 
-Being able to combine data from multiple data sources in one graph allows you to correlate information from both Prometheus and Loki.
+Ser capaz de combinar dados de várias fontes de dados em um gráfico permite correlacionar informações do Prometheus e do Loki.
 ```
 
-# Set up an alert
+# Configure um alerta
 ```
-Alerts allow you to identify problems in your system moments after they occur. By quickly identifying unintended changes in your system, you can minimize disruptions to your services.
+Os alertas permitem que você identifique problemas em seu sistema momentos após eles ocorrerem. Ao identificar rapidamente mudanças não intencionais em seu sistema, você pode minimizar interrupções em seus serviços.
 
-Alerts consists of two parts:
+Os alertas consistem em duas partes:
 
-Notification channel - How the alert is delivered. When the conditions of an alert rule are met, the Grafana notifies the channels configured for that alert.
-Alert rules - When the alert is triggered. Alert rules are defined by one or more conditions that are regularly evaluated by Grafana.
+Canal de notificação - Como o alerta é entregue. Quando as condições de uma regra de alerta são atendidas, o Grafana notifica os canais configurados para aquele alerta.
+Regras de alerta - quando o alerta é acionado. As regras de alerta são definidas por uma ou mais condições que são avaliadas regularmente pela Grafana.
 ```
 
-# Configure a notification channel
+# Configure um canal de notificação
 ```
-In this step, you’ll send alerts using web hooks. To test your alerts, you first need to have a place to send them.
+Nesta etapa, você enviará alertas usando web hooks. Para testar seus alertas, primeiro você precisa ter um local para enviá-los.
 
-Browse to requestbin.com.
+Navegue até requestbin.com.
 
-Clear the Private (requires log in) check box.
+Desmarque a caixa de seleção Privado (requer login).
 
-Click Use Old Version (which is publicly available).
+Clique em Usar versão antiga (que está disponível publicamente).
 
 You request bin is now waiting for the first request.
 
