--- a/25.Grafana.md
+++ b/25.Grafana.md
@@ -156,27 +156,27 @@ https://grafana.com/tutorials/grafana-fundamentals/#9<br>
 Quando as coisas vão mal, é necessário enender o contexto da falha. Tempo da última implantação, mudanças de sistemas, ou migração de bases de dados podem oferecer uma visão sobre o que pode ter causado uma interrupção. As anotações permitem que você represente tais eventos diretamente em seus gráficos.
 
 Para adicionar uma anotação:
-Clique em qualquer lugar do gráfico e, a seguir, clique em Adicionar anotação.
+Clique em qualquer lugar do gráfico (Botão Esquerdo) e, a seguir, clique em Adicionar anotação.
 
-Em Descrição, insira Banco de dados do usuário migrado.
+Em Descrição, insira "Banco de dados do usuário migrado".
 
 Click Save.
 
-Grafana adiciona sua anotação ao gráfico. Passe o mouse sobre a base da anotação para ler o texto.
+Grafana adiciona sua anotação ao gráfico. Passe o mouse sobre a base da anotação para ler o texto (No triângulo).
 
 Grafana também permite anotar um intervalo de tempo, com anotações de região.
 
 Adicionar uma anotação de região:
 
 Pressione Ctrl, clique e arraste pelo gráfico para selecionar uma área.
-Em Descrição, insira Testes de carga realizados.
-Em Tags, insira testing.
+Em Descrição, insira "Testes de carga realizados".
+Em Tags, insira "testing".
 
 Anotar manualmente seu painel é adequado para esses eventos únicos. Para eventos que ocorrem regularmente, como a implantação de uma nova versão, o Grafana oferece suporte à consulta de anotações de uma de suas fontes de dados. Vamos criar uma anotação usando a fonte de dados Loki que adicionamos anteriormente.
 
-Na parte superior do painel, clique no ícone Configurações do painel (engrenagem).
+Na parte superior do painel, clique no ícone Configurações do painel (engrenagem - Dashboard settings).
 
-Vá para Anotações e clique em Adicionar consulta de anotação.
+Vá para Anotações (Menu vertical esquerdo) e clique em Adicionar consulta de anotação (Botão Add Annotation Query).
 
 Em Nome, insira Erros.
 
@@ -185,9 +185,9 @@ Em Fonte de dados, selecione Loki.
 Em Consulta, insira a seguinte consulta:
 
 {filename="/var/log/tns-app.log"} |= "error"
-Clique em Adicionar. Grafana exibe a lista de Anotações, com sua nova anotação.
+Clique no Botão Add. Grafana exibe a lista de Anotações, com sua nova anotação.
 
-Clique na seta Voltar para retornar ao seu painel.
+Clique na seta Voltar (Canto superior esquerdo) para retornar ao seu painel.
 
 As linhas de registro retornadas por sua consulta agora são exibidas como anotações no gráfico.
 
@@ -210,15 +210,16 @@ Nesta etapa, você enviará alertas usando web hooks. Para testar seus alertas, 
 
 Navegue até requestbin.com.
 
-Desmarque a caixa de seleção Privado (requer login).
-
 Clique em Usar versão antiga (que está disponível publicamente).
+https://requestbin.com/r
 
-You request bin is now waiting for the first request.
+Faça o login com o google (acho que não precisava).
 
-Copy the endpoint URL.
+Copie o endpoint...
 
-Next, configure a notification channel for web hooks to send notifications to your Request Bin.
+
+Configurando uma notification channel:
+
 
 In the side bar, hover your cursor over the Alerting (bell) icon and then click Notification channels.
 Click Add channel.
@@ -228,8 +229,8 @@ In Url, paste the endpoint to your request bin.
 
 https://endpoint.m.pipedream.net
 
-Click Send Test to send a test alert to your request bin.
-Navigate back to the request bin you created earlier. On the left side, there’s now a POST / entry. Click it to see what information is sent by Grafana.
+Click no Botão Test para enviar um alerta to your request bin.
+Acesse a aba do endpoint e veja que haberá uma entrada de POST.
 Click Save.
 ```
 
