--- a/26.InstallUbuntuServer.md
+++ b/26.InstallUbuntuServer.md
@@ -28,6 +28,31 @@ De outro PC (ou do mesmo PC, sem usar o Putty)
 Abra o Putty
 Acesse 192.168.1.108 na porta 22(veja seu IP)
 
+
+PROXY
+sudo nano /etc/netplan/00-installer-config.yaml
+# This is the network config written by 'subiquity'
+network:
+  ethernets:
+    eth0:
+      addresses:
+      - 192.168.1.108/24
+      gateway4: 192.168.1.1
+      nameservers:
+        addresses:
+        - 8.8.4.4
+        - 8.8.8.8
+        search:
+        - 8.8.4.4
+        - 8.8.8.8
+  version: 2
+
+
+sudo nano /etc/apt/apt.conf.d/90curtin-aptproxy
+Acquire::http::Proxy "http://<USUÁRIO>:<SENHA>@<ENDEREÇO DO PROXY>:<PORTA DO PROXY>";
+Acquire::https::Proxy "http://<USUÁRIO>:<SENHA>@<ENDEREÇO DO PROXY>:<PORTA DO PROXY>";
+
+
 2. CONFIGURAÇÃO
 sudo apt-get update
 sudo apt-get upgrade
@@ -282,100 +307,5 @@ setterm --blank 1
 sudo chmod 755 /etc/init.d/meuscript
 
 sudo update-rc.d meuscript defaults
-
-6. PROXY
-sudo nano /etc/profile
-Colocar no final:
-http_proxy="http://usuario:senha@ip.do.servidor.proxy:porta"
-ftp_proxy="http://usuario:senha@ip.do.servidor.proxy:porta"
-export http_proxy ftp_proxy
-
-Ctrl+O
-Enter
-Ctrl+X
-
-sudo nano /etc/apt/apt.conf.d/02proxy
-
-Acquire {
- HTTP::PROXY=usuario:senha@ip.do.servidor.proxy:porta;
- FTP::PROXY=usuario:senha@ip.do.servidor.proxy:porta;
-}
-
-
-___
-
-sudo nano /etc/profile
-export https_proxy=http://ipDoProxy:porta
-export http_proxy=http://ipDoProxy:porta
-export ftp_proxy=http://ipDoProxy:porta
-___
-
-
-
-sudo nano /etc/profile.d/proxy.conf
-
-export https_proxy=http://usuario:senha@ip.do.servidor.proxy:porta
-export http_proxy=http://usuario:senha@ip.do.servidor.proxy:porta
-
-sudo reboot
-
-source /etc/profile.d/proxy.conf
-
-sudo nano /etc/apt/apt.conf
-
-Acquire::http::proxy "http://Usuario:Senha@Servidor:Porta/";
-Acquire::https::proxy "https://Usuario:Senha@Servidor:Porta/";
-Acquire::ftp::proxy "ftp://Usuario:Senha@Servidor:Porta/";
-Acquire::socks::proxy "socks://Usuario:Senha@Servidor:Porta/";
-
-___
-
-sudo nano /etc/environment
-
-http_proxy=http://myusername:mypassword@myproxy.server.com:8080/
-https_proxy=https://myusername:mypassword@myproxy.server.com:8080/
-ftp_proxy=ftp://myusername:mypassword@myproxy.server.com:8080/
-no_proxy=”localhost,127.0.0.1,localaddress,.localdomain.com”
-HTTP_PROXY=http://myusername:mypassword@myproxy.server.com:8080/
-HTTPS_PROXY=https://myusername:mypassword@myproxy.server.com:8080/
-FTP_PROXY=ftp://myusername:mypassword@myproxy.server.com:8080/
-NO_PROXY=”localhost,127.0.0.1,localaddress,.localdomain.com”
-
-sudo nano /etc/apt/apt.conf.d/02proxy
-Acquire::http::proxy “http://myusername:mypassword@myproxy.server.com:8080/”;
-Acquire::ftp::proxy “ftp://myusername:mypassword@myproxy.server.com:8080/”;
-Acquire::https::proxy “https://myusername:mypassword@myproxy.server.com:8080/”;
-
-
-___
-sudo nano /etc/wgetrc
-
-# You can set the default proxies for Wget to use for http, https and ftp.
-https_proxy = http://<USUÁRIO>:<SENHA>@<ENDEREÇO DO PROXY>:<PORTA DO PROXY>/
-http_proxy = http://<USUÁRIO>:<SENHA>@<ENDEREÇO DO PROXY>:<PORTA DO PROXY>/
-ftp_proxy = http://<USUÁRIO>:<SENHA>@<ENDEREÇO DO PROXY>:<PORTA DO PROXY>/
-
-
-___
-cd /etc/
-sudo mkdir resolvconf
-cd resolvconf
-sudo mkdir resolv.conf.d
-sudo nano /etc/resolvconf/resolv.conf.d/head
-
-nameserver 8.8.8.8
-nameserver 8.8.4.4
-
-Ctrl+O
-Enter
-Ctrl+X
-
-sudo nano /etc/resolv.conf
-nameserver 208.67.220.220
-nameserver 208.67.222.222
-nameserver 8.8.4.4
-nameserver 8.8.8.8
-
-
 
 ```
